[gd_scene load_steps=4 format=3 uid="uid://br8i1wfbxvocn"]

[ext_resource type="Script" path="res://Actors/Cell/Cell.gd" id="1_2thgq"]
[ext_resource type="Texture2D" uid="uid://4uphbda3apgs" path="res://Actors/Cell/Cell.png" id="1_fv626"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c6qpx"]

[node name="Cell" type="Node2D"]
script = ExtResource("1_2thgq")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_c6qpx")

[node name="CellSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, 10)
texture = ExtResource("1_fv626")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
